--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -40,7 +40,7 @@ To work with math elements, follow these steps:
 
 . Open the {productname} editor with the {pluginname} plugin enabled.
 .. Click the {pluginname} plugin icon in the toolbar to `insert` or `edit` a math element.
-.. This opens the {pluginname} dialog which allows the user to choose between either `LaTex` and `MathML` equations for the formulas field.
+.. This opens the {pluginname} dialog which allows the user to choose between either `LaTeX` and `MathML` equations for the formulas field.
 .. By default, `LaTeX` is selected.
 . In the {pluginname} dialog, use the textarea when inserting formulas.
 .. Choose to `insert` the formula either as a **block** paragraph or **inline** with text.
