--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -69,7 +69,7 @@ The `+<tiny-math-block formula="">+` custom tag is used to wrap the `+<math>+`, 
 
 === Inserting LaTeX formulas (Inline)
 
-The <tiny-math-inline formula=""> custom tag is used to wrap the <math>, <semantics>, and <mrow> tags when inserting a LaTeX formulas, when the `Text Wrap` is set to `Inline with Text`.
+The `+<tiny-math-inline formula="">+` custom tag is used to wrap the `+<math>+`, `+<semantics>+`, and `+<mrow>+` tags when inserting a LaTeX formulas, when the `Text Wrap` is set to `Inline with Text`.
 
 [source]
 ----
