--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -101,7 +101,7 @@ The `+<tiny-math-block>+` custom tag is used to wrap the `+<math>+`, `+<mrow>+`,
 
 === Inserting MathML formulas (Inline)
 
-The <tiny-math-block-inline> custom tag is used to wrap the <math>, <mrow>, and <mn> tags when inserting a MathML formulas when the `Text Wrap` is set to `Inline with Text`.
+The `+<tiny-math-block-inline>+` custom tag is used to wrap the `+<math>+`, `+<mrow>+`, and `+<mn>+` tags when inserting a MathML formulas when the `Text Wrap` is set to `Inline with Text`.
 
 [source]
 ----
