--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -118,6 +118,8 @@ Previously, when opening a custom view on small screens or mobile devices, like 
 
 As a result, header buttons and UI components are more accessible and visible on small screens and mobile devices, ensuring that users can interact with the custom view without issues.
 
+For more information, see the xref:custom-view.adoc[Custom views] documentation.
+
 === Notification accessibility improvements: added tooltips, keyboard navigation and shortcut to focus on notifications.
 
 In previous versions of {productname}, an accessibility issue was identified that affected keyboard-only, specifically when a user receives a notification and they where unable to close it using the keyboard.
