--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -112,7 +112,7 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 === In the custom view, the scrollbar of the container were not visible if its height was greater than the editor.
 // #TINY-10741
 
-Previously, when opening a custom view on small screens or mobile devices, like the revision history view, some header buttons and UI components were not completely visible, and in some cases, they were not accessible. For example, users might not have been able to close the view because the Close button was obscured on smaller screens.
+Previously, when opening a custom view on small screens or mobile devices, like the Revision History view, some header buttons and UI components were not completely visible, and in some cases, they were not accessible. For example, users might not have been able to close the view because the Close button was obscured on smaller screens.
 
 {productname} {release-version} addresses this issue by improving the layout's responsiveness to maximize usability.
 
