DOC-2366: Add revision history API section

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -114,3 +114,9 @@ include::partial$commands/{plugincode}-cmds.adoc[]
 The {pluginname} plugin provides the following events.
 
 include::partial$events/{plugincode}-events.adoc[]
+
+== APIs
+
+The {pluginname} plugin provide the following APIs.
+
+include::partial$plugin-apis/{plugincode}-apis.adoc[]
