--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -33,10 +33,12 @@ To add the {pluginname} plugin to the editor, add both `{plugincode}` to the `pl
 
 For example, interfacing with the OpenAI Completions API:
 
+include::partial$misc/admon-ai-proxy.adoc[]
+
 [source,js]
 ----
-// This example stores the API key in the client side integration. This is not recommended for any purpose.
-// Instead, an alternate method for retrieving the API key should be used.
+// Providing access credentials within the integration is not recommended for production use.
+// We recommend setting up a proxy server to authenticate requests and provide access.
 const api_key = '<INSERT_API_KEY_HERE>';
 
 tinymce.init({
