change gemini prerequisites to ordered list

--- a/modules/ROOT/pages/ai-gemini.adoc
+++ b/modules/ROOT/pages/ai-gemini.adoc
@@ -33,10 +33,10 @@ The https://www.npmjs.com/package/google-auth-library[google-auth-library] can b
 
 Before you begin, you need to have the following:
 
-* A Google Cloud Platform (GCP) account.
-* A Google Cloud Project with the Vertex AI API enabled.
-* The Project ID and Region of the Google Cloud Project.
-* An Access Token for the Vertex AI API.
+. A Google Cloud Platform (GCP) account.
+. A Google Cloud Project with the Vertex AI API enabled.
+. The Project ID and Region of the Google Cloud Project.
+. An Access Token for the Vertex AI API.
 
 include::partial$misc/admon-ai-proxy.adoc[]
 
