DOC-2399: Extract OpenAI integration code to separate page (#3270)
* add ai-openai.adoc page with OpenAI string and streaming code examples

* change ai_request to use minimal string response code example

* remove basic setup section from ai.adoc and fix options headings nesting levels

* add missing heading to ai-openai.adoc

* move openai to above proxy in nav.adoc

* add ai proxy admonitions (will be functional once merged into tinymce/7)

* only include ai proxy admon once per page

* change gemini prerequisites to ordered list

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -290,6 +290,7 @@
 *** xref:a11ychecker.adoc[Accessibility Checker]
 *** xref:advanced-typography.adoc[Advanced Typography]
 *** xref:ai.adoc[AI Assistant]
+**** xref:ai-openai.adoc[OpenAI ChatGPT integration guide]
 **** xref:ai-bedrock.adoc[Amazon Bedrock integration guide]
 **** xref:ai-gemini.adoc[Google Gemini integration guide]
 **** xref:ai-proxy.adoc[AI proxy server reference guide]
