--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -188,12 +188,17 @@ For more information on bundling with {productname}, see xref:bundling-plugins.a
 == Bug fixes
 
 {productname} {release-version} also includes the following bug fixes:
+=== Open link context menu action did not work with selection surrounding a link
+In previous versions of {productname}, nothing happened when selecting `Open link` context menu action on a link inside selection that is expanded to the surrounding content.
+
+In {productname} {release-version}, the issue has been fixed. Selecting `Open link` context menu action opens the targeted link in a new tab.
 
 === Open link context menu action was not enabled for links on images.
-// #TINY-10391
+In previous versions of {productname},`Open link` context menu action was not enabled for links on images.
 
-// CCFR here.
+As a consequence, the users could not trigger opening the link via link context menu, hindering users' work flow.
 
+In {productname} {release-version}, the `Open link` context menu is enabled for links on images.
 
 === Dialog title was not announced in macOS VoiceOver, dialogs now use `aria-label` instead of `aria-labelledby` on macOS.
 // #TINY-10808
